@@ -18,6 +18,7 @@ Contents
     - Connections via the General Purpose Tower Plug-in (TWRPI) Socket
     - Connections via the Tower Primary Connector Side A
     - Connections via the Tower Primary Connector Side B
+    - TWR-SER Serial Board Connection
   o LEDs
   o Development Environment
   o GNU Toolchain Options
@@ -69,24 +70,24 @@ LEDs                 E1 / Orange LED           PTA11    PTA11
                      E2 / Yellow LED           PTA28    PTA28
                      E3 / Green LED            PTA29    PTA29
                      E4 / Blue LED             PTA10    PTA10
-Potentiometer        Potentiometer (R71)        ?        ADC1_DM1
-Accelerometer        I2C SDA                    PTD9     I2C0_SDA
-                     I2C SCL                    PTD8     I2C0_SCL
-                     IRQ                        PTD10    PTD10
-Touch Pad / Segment  Electrode 0 (J3 Pin 3)     PTB0     TSI0_CH0
-LCD TWRPI Socket     Electrode 1 (J3 Pin 5)     PTB1     TSI0_CH6
-                     Electrode 2 (J3 Pin 7)     PTB2     TSI0_CH7
-                     Electrode 3 (J3 Pin 8)     PTB3     TSI0_CH8
-                     Electrode 4 (J3 Pin 9)     PTC0     TSI0_CH13
-                     Electrode 5 (J3 Pin 10)    PTC1     TSI0_CH14
-                     Electrode 6 (J3 Pin 11)    PTC2     TSI0_CH15
-                     Electrode 7 (J3 Pin 12)    PTA4     TSI0_CH5
-                     Electrode 8 (J3 Pin 13)    PTB16    TSI0_CH9
-                     Electrode 9 (J3 Pin 14)    PTB17    TSI0_CH10
-                     Electrode 10 (J3 Pin 15)   PTB18    TSI0_CH11
-                     Electrode 11 (J3 Pin 16)   PTB19    TSI0_CH12
-                     TWRPI ID0 (J3 Pin 17)      ?        ADC1_DP1
-                     TWRPI ID1 (J3 Pin 18)      ?        ADC1_SE16
+Potentiometer        Potentiometer (R71)       ?        ADC1_DM1
+Accelerometer        I2C SDA                   PTD9     I2C0_SDA
+                     I2C SCL                   PTD8     I2C0_SCL
+                     IRQ                       PTD10    PTD10
+Touch Pad / Segment  Electrode 0 (J3 Pin 3)    PTB0     TSI0_CH0
+LCD TWRPI Socket     Electrode 1 (J3 Pin 5)    PTB1     TSI0_CH6
+                     Electrode 2 (J3 Pin 7)    PTB2     TSI0_CH7
+                     Electrode 3 (J3 Pin 8)    PTB3     TSI0_CH8
+                     Electrode 4 (J3 Pin 9)    PTC0     TSI0_CH13
+                     Electrode 5 (J3 Pin 10)   PTC1     TSI0_CH14
+                     Electrode 6 (J3 Pin 11)   PTC2     TSI0_CH15
+                     Electrode 7 (J3 Pin 12)   PTA4     TSI0_CH5
+                     Electrode 8 (J3 Pin 13)   PTB16    TSI0_CH9
+                     Electrode 9 (J3 Pin 14)   PTB17    TSI0_CH10
+                     Electrode 10 (J3 Pin 15)  PTB18    TSI0_CH11
+                     Electrode 11 (J3 Pin 16)  PTB19    TSI0_CH12
+                     TWRPI ID0 (J3 Pin 17)     ?        ADC1_DP1
+                     TWRPI ID1 (J3 Pin 18)     ?        ADC1_SE16
 
 Connections via the General Purpose Tower Plug-in (TWRPI) Socket
 -------------------- ------------------------- -------- -------------------
@@ -228,6 +229,33 @@ B77 EBI_D3               PTC12
 B78 EBI_D2               PTC13
 B79 EBI_D1               PTC14
 B80 EBI_D0               PTC15
+
+TWR-SER Serial Board Connection
+===============================
+
+The serial board connects into the tower and then maps to the tower pins to
+yet other functions (see TWR-SER.pdf).
+
+For the serial port, the following jumpers are required:
+
+  J15: 1-2 (default)
+  J17: 1-2 (default)
+  J18: 1-2 (default)
+  J19: 1-2 (default)
+
+The two connections map as follows:
+
+  A41 RXD0  - Not connected
+  A42 TXD0  - Not connected
+  A43 RXD1  - ELE_RXD (connects indirectory to DB-9 connector J8)
+  A44 TXD1  - ELE_TXD (connects indirectory to DB-9 connector J8)
+
+Finally, we can conclude that:
+
+  UART4 (PTE24/25) is not connected, and
+  UART3 (PTC16/17) is associated with the DB9 connector
+
+NOTE: UART5 is associated with OSJTAG bridge and may also be usable.
 
 LEDs
 ====
